Update and rename dlnd_face_generation.ipynb to Face Generation DCGAN.ipynb

--- a/Face Generation DCGAN/Face Generation DCGAN.ipynb
+++ b/Face Generation DCGAN/Face Generation DCGAN.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Face Generation Project\n",
+    "# Face Generation DCGAN Project\n",
     "\n",
     "In this project, a DCGAN is defined and trained on a dataset of faces. The goal is to get a generator network to generate *new* images of faces that look as realistic as possible.\n",
     "\n",
