Update and rename Predicting_bike_sharing_data.ipynb to Bike sharing prediction NN.ipynb

--- a/Bike sharing prediction NN/Bike sharing prediction NN.ipynb
+++ b/Bike sharing prediction NN/Bike sharing prediction NN.ipynb
@@ -596,7 +596,7 @@
     "\n",
     "Below the network is built, implementing both the forward pass and backwards pass through the network. Also the required hyperparameters are set (learning rate, number of hidden units, number of training passes).\n",
     "\n",
-    "<img src=\"assets/neural_network.png\" width=300px>\n",
+    "<img src=\"neural_network.png\" width=300px>\n",
     "\n",
     "The network has two layers, a hidden layer and an output layer. The hidden layer uses the sigmoid function for activations. The output layer has only one node and is used for the regression, the output of the node is the same as the input of the node. That is, the activation function is $f(x)=x$.  "
    ]
