Update Bike sharing prediction NN.ipynb

--- a/Bike sharing prediction NN/Bike sharing prediction NN.ipynb
+++ b/Bike sharing prediction NN/Bike sharing prediction NN.ipynb
@@ -231,7 +231,7 @@
    "source": [
     "# Load data\n",
     "\n",
-    "data_path = 'Bike-Sharing-Dataset/hour.csv'\n",
+    "data_path = 'data.csv'\n",
     "rides = pd.read_csv(data_path)\n",
     "\n",
     "# Visualize data structure\n",
@@ -842,7 +842,7 @@
     "    # Test that file path to dataset has been unaltered    \n",
     "    \n",
     "    def test_data_path(self):\n",
-    "        self.assertTrue(data_path.lower() == 'bike-sharing-dataset/hour.csv')\n",
+    "        self.assertTrue(data_path.lower() == 'data.csv')\n",
     "    \n",
     "    # Test that data frame loaded    \n",
     "    \n",
